fix(common-utils): remove stray markdown, duplicate imports and restore ESM; enable jest ESM test runner

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "report": "node scripts/grade-report.mjs",
     "report:npx": "node scripts/grade-report-npx.mjs",
     "report:serve": "node scripts/serve.mjs --dir dist --port 8080",
-    "test": "jest",
+  "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "doctor": "node -e \"console.log('Node', process.version)\" && spectral --version && redocly --version"
   },
   "bin": {
