--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.13.0",
   "private": false,
   "type": "module",
+  "publishConfig": { "access": "public", "registry": "https://registry.npmjs.org/" },
   "engines": {
     "node": ">=20.19.0"
   },
@@ -56,9 +57,6 @@
     "README.md",
     "LICENSE"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "dependencies": {
     "@redocly/cli": "2.7.0",
     "@stoplight/spectral-cli": "6.15.0",
