ci(workflows): allow tools_ref input so callers can request a specific tools repo ref

--- a/.github/workflows/openapi-grade.yml
+++ b/.github/workflows/openapi-grade.yml
@@ -6,6 +6,10 @@ on:
       spec_path:
         type: string
         required: true
+      tools_ref:
+        type: string
+        required: false
+        default: 'develop'
       schema_lint:
         type: string
         required: false
@@ -31,6 +35,7 @@ jobs:
         with:
           repository: ${{ inputs.tools_repo }}
           path: tools
+          ref: ${{ inputs.tools_ref }}
 
 
       - name: Setup Node
