--- a/.github/workflows/openapi-grade.yml
+++ b/.github/workflows/openapi-grade.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Checkout caller repo
         uses: actions/checkout@v4
 
-      - name: Checkout tools repo
+      - name: Checkout tools repo (or use local workspace if same repo)
+        if: ${{ inputs.tools_repo != github.repository }}
         uses: actions/checkout@v4
         with:
           repository: ${{ inputs.tools_repo }}
@@ -49,11 +50,11 @@ jobs:
           version: 8
 
       - name: Install tools
-        working-directory: tools
+        working-directory: ${{ inputs.tools_repo == github.repository && github.workspace || 'tools' }}
         run: pnpm install
 
       - name: Grade
-        working-directory: tools
+        working-directory: ${{ inputs.tools_repo == github.repository && github.workspace || 'tools' }}
         env:
           SCHEMA_LINT: ${{ inputs.schema_lint }}
           GRADE_SOFT: ${{ inputs.grade_soft }}
