--- a/.github/workflows/openapi-validate.yml
+++ b/.github/workflows/openapi-validate.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Checkout caller repo
         uses: actions/checkout@v4
 
-      - name: Checkout tools repo
+      - name: Checkout tools repo (or use local workspace if same repo)
+        if: ${{ inputs.tools_repo != github.repository }}
         uses: actions/checkout@v4
         with:
           repository: ${{ inputs.tools_repo }}
@@ -48,11 +49,11 @@ jobs:
           version: 8
 
       - name: Install tools
-        working-directory: tools
+        working-directory: ${{ inputs.tools_repo == github.repository && github.workspace || 'tools' }}
         run: pnpm install
 
       - name: Validate
-        working-directory: tools
+        working-directory: ${{ inputs.tools_repo == github.repository && github.workspace || 'tools' }}
         env:
           SCHEMA_LINT: ${{ inputs.schema_lint }}
         run: pnpm run validate -- ../${{ inputs.spec_path }}
