--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "validate": "node scripts/validate.mjs",
     "validate:npx": "node scripts/validate-npx.mjs",
     "grade": "node scripts/grade.mjs",
+  "check": "SCHEMA_LINT=1 node scripts/grade.mjs",
     "grade:npx": "node scripts/grade-npx.mjs",
     "report": "node scripts/grade-report.mjs",
     "report:npx": "node scripts/grade-report-npx.mjs",
