--- a/.github/workflows/openapi-validate.yml
+++ b/.github/workflows/openapi-validate.yml
@@ -43,20 +43,17 @@ jobs:
         with:
           node-version: '22'
 
-      - name: Set up pnpm
+      - name: Setup pnpm
         uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
       - name: Install tools
         working-directory: ${{ inputs.tools_repo == github.repository && github.workspace || 'tools' }}
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
-      - name: Validate
+      - name: Validate (canonical)
         working-directory: ${{ inputs.tools_repo == github.repository && github.workspace || 'tools' }}
         env:
           SCHEMA_LINT: ${{ inputs.schema_lint }}
-        run: pnpm run validate -- ../${{ inputs.spec_path }}
+        run: pnpm run check -- ../${{ inputs.spec_path }} --no-bundle
 
       - name: Upload bundle
         if: always()
