--- a/.github/workflows/openapi-docs.yml
+++ b/.github/workflows/openapi-docs.yml
@@ -24,15 +24,17 @@ jobs:
         with:
           node-version: '22'
 
-      - name: Set up pnpm
+      - name: Setup pnpm
         uses: pnpm/action-setup@v3
-        with:
-          version: 8
+      - name: Install tools
+        run: pnpm install --frozen-lockfile
 
-      - name: Build docs
+      - name: Build docs (canonical)
         run: |
+          corepack prepare pnpm@8 --activate || true
+          pnpm install --frozen-lockfile
           mkdir -p dist
-          pnpm dlx @redocly/cli@2.7.0 build-docs "${{ inputs.spec_path }}" --output dist/index.html
+          pnpm run report -- ../${{ inputs.spec_path }} --generate-only
 
       - name: Upload docs
         uses: actions/upload-artifact@v4
