--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,8 +15,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
+      - name: Enable Corepack and prepare pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@8 --activate
       - name: Install dependencies
         run: |
           pnpm install --frozen-lockfile
