--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,20 +11,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'pnpm'
+
       - name: Enable Corepack and prepare pnpm
         run: |
           corepack enable
           corepack prepare pnpm@8 --activate
+
       - name: Install dependencies
-        run: |
-          pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
+
       - name: Run OpenAPI check (bundle + lint + report)
-        run: |
-          pnpm run check -- example/openapi.yaml --docs
+        run: pnpm run check -- example/openapi.yaml --docs
         env:
           SCHEMA_LINT: '1'
           CI: '1'
