ci(workflows): enable Corepack and prepare pnpm in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Enable Corepack and prepare pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@8 --activate
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
