ci(workflows): align pnpm version to v9 (pnpm-lock v9); prepare pnpm@9 or use pnpm/action-setup@v3 with version 9

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -55,7 +55,7 @@ jobs:
         if: ${{ steps.elig.outputs.publish == 'true' }}
         uses: pnpm/action-setup@v3
         with:
-          version: 8
+          version: '9'
       - name: Install
         if: ${{ steps.elig.outputs.publish == 'true' }}
         run: pnpm install
