--- a/.github/workflows/openapi-docs.yml
+++ b/.github/workflows/openapi-docs.yml
@@ -26,12 +26,14 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
+        with:
+          version: '9'
       - name: Install tools
         run: pnpm install --frozen-lockfile
 
       - name: Build docs (canonical)
         run: |
-          corepack prepare pnpm@8 --activate || true
+          corepack prepare pnpm@9 --activate || true
           pnpm install --frozen-lockfile
           mkdir -p dist
           pnpm run report -- ../${{ inputs.spec_path }} --generate-only
