--- a/.github/workflows/openapi-validate.yml
+++ b/.github/workflows/openapi-validate.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
+        with:
+          version: '9'
       - name: Install tools
         working-directory: ${{ inputs.tools_repo == github.repository && github.workspace || 'tools' }}
         run: pnpm install --frozen-lockfile
