--- a/.github/workflows/debug-grade.yml
+++ b/.github/workflows/debug-grade.yml
@@ -23,8 +23,16 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run grade with debug env
+      - name: Redocly diagnostics
+        run: |
+          echo "Node: $(node -v)"
+          echo "pnpm: $(pnpm -v)"
+          pnpm exec -- redocly --version || echo 'redocly not available via pnpm exec'
+          echo "node_modules/.bin contents:" && ls -la node_modules/.bin || true
+          echo "Top-level installed packages:" && pnpm list --depth 0 || true
+
+      - name: Run check (debug env)
         env:
           DEBUG_CLI_ARGS: '1'
           SCHEMA_LINT: '1'
-        run: pnpm run -s grade -- -- example/openapi.yaml
+        run: pnpm run -s check -- -- example/openapi.yaml
