--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,10 +24,19 @@ jobs:
       - name: Set up pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: 8
+          version: '9'
 
       - name: Install deps
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+
+      - name: Redocly diagnostics
+        run: |
+          echo "Node: $(node -v)"
+          echo "pnpm: $(pnpm -v)"
+          echo "Check redocly binary (pnpm exec):"
+          pnpm exec -- redocly --version || echo 'redocly not available via pnpm exec'
+          echo "node_modules/.bin contents:" && ls -la node_modules/.bin || true
+          echo "Top-level installed packages:" && pnpm list --depth 0 || true
 
       - name: Validate example spec
         run: pnpm run check -- example/openapi.yaml --no-bundle
