--- a/.github/workflows/debug-grade.yml
+++ b/.github/workflows/debug-grade.yml
@@ -23,16 +23,18 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Redocly diagnostics
+      - name: Tool diagnostics (safe)
         run: |
-          echo "Node: $(node -v)"
-          echo "pnpm: $(pnpm -v)"
-          pnpm exec -- redocly --version || echo 'redocly not available via pnpm exec'
+          node -e "console.log('Node:', process.version)"
+          pnpm -v || echo 'pnpm not available'
+          pnpm exec -- spectral --version || echo 'spectral not available via pnpm exec'
+          # redocly is optional and may not be published/installed; do not fail here
+          pnpm exec -- redocly --version 2>/dev/null || echo 'redocly not available via pnpm exec (optional)'
           echo "node_modules/.bin contents:" && ls -la node_modules/.bin || true
           echo "Top-level installed packages:" && pnpm list --depth 0 || true
 
-      - name: Run check (debug env)
+      - name: Run check (debug env, schema lint OFF by default)
         env:
           DEBUG_CLI_ARGS: '1'
-          SCHEMA_LINT: '1'
+          SCHEMA_LINT: '0'
         run: pnpm run -s check -- -- example/openapi.yaml
