--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "url": "git+https://github.com/ramongranda/openapi-anyenv-suite.git"
   },
   "scripts": {
-  "check": "node scripts/grade.mjs",
-  "grade": "pnpm run check --",
+    "check": "node scripts/grade.mjs",
+    "grade": "pnpm run check --",
     "report": "node scripts/grade-report.mjs",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "doctor": "node scripts/doctor.mjs"
+    "doctor": "node scripts/doctor.mjs",
+    "release": "semantic-release"
   },
   "bin": {
     "openapi-grade": "scripts/grade.mjs"
@@ -57,6 +58,13 @@
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "semantic-release": "^19.0.0",
+    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/github": "^10.0.0",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/commit-analyzer": "^10.0.0",
+    "@semantic-release/release-notes-generator": "^11.0.0"
   }
 }
