--- a/.github/workflows/pull-request-dryrun.yml
+++ b/.github/workflows/pull-request-dryrun.yml
@@ -22,6 +22,13 @@ jobs:
           corepack enable
           corepack prepare pnpm@10.19.0 --activate
 
+      - name: Cache pnpm store
+        uses: actions/cache@v4
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
