--- a/package.json
+++ b/package.json
@@ -54,17 +54,17 @@
   "dependencies": {
     "@redocly/cli": "2.7.0",
     "@stoplight/spectral-cli": "6.15.0",
-    "yaml": "^2.6.0"
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.0",
+    "@semantic-release/npm": "^13.1.1",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "cross-env": "^10.1.0",
     "jest": "^30.2.0",
-    "semantic-release": "^25.0.1",
-    "@semantic-release/npm": "^13.1.1",
-    "@semantic-release/github": "^12.0.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/release-notes-generator": "^14.1.0"
+    "semantic-release": "^25.0.1"
   }
 }
