--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "report": "node scripts/grade-report.mjs",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "doctor": "node scripts/doctor.mjs",
-    "release": "semantic-release"
+  "release": "node scripts/release-only-ci.mjs"
   },
   "bin": {
     "openapi-grade": "scripts/grade.mjs"
