--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,6 +17,7 @@ jobs:
   build-and-push:
     name: Build and push image to GHCR
     runs-on: ubuntu-latest
+    if: ${{ (github.event_name == 'release' && github.event.release.target_commitish == 'main') || github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
     outputs:
       image: ${{ steps.meta.outputs.image }}
       version: ${{ steps.meta.outputs.version }}
