--- a/.github/workflows/pull-request-dryrun.yml
+++ b/.github/workflows/pull-request-dryrun.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+          persist-credentials: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -38,7 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Capture output to a file so we can comment it on the PR
-          npx semantic-release --dry-run > release-dryrun.log 2>&1 || true
+          npx semantic-release --dry-run --debug > release-dryrun.log 2>&1 || true
 
       - name: Extract proposed version
         id: extract
