--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,11 +1,16 @@
 {
-  "branches": ["main"],
+  "branches": [
+    "main",
+    { "name": "develop", "prerelease": true },
+    { "name": "feature/*", "prerelease": "rc" },
+    { "name": "fix/*", "prerelease": "rc" }
+  ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    ["@semantic-release/npm", {"npmPublish": true}],
-    ["@semantic-release/github", {"assets": []}],
-    ["@semantic-release/git", {"assets": ["package.json", "CHANGELOG.md"], "message": "chore(release): ${nextRelease.version} [skip ci]"}]
+    ["@semantic-release/npm", { "npmPublish": true }],
+    ["@semantic-release/github", { "assets": [] }],
+    ["@semantic-release/git", { "assets": ["package.json", "CHANGELOG.md"], "message": "chore(release): ${nextRelease.version} [skip ci]" }]
   ]
 }
