--- a/.github/workflows/pull-request-dryrun.yml
+++ b/.github/workflows/pull-request-dryrun.yml
@@ -1,99 +1,71 @@
-name: PR release dry-run
+name: Pull Request Dry Run
+
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 permissions:
   contents: read
   issues: write
   pull-requests: write
 
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-    branches: [ main ]
-
 jobs:
   semantic-release-dry-run:
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-    name: semantic-release dry-run
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           fetch-tags: true
           persist-credentials: true
-          
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          # semantic-release v25 requires Node >=24.10.0; run PR dry-runs on a compatible runtime
-          node-version: '24.10.0'
-
-      - name: Enable Corepack & pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@10.19.0 --activate
-
-      - name: Cache pnpm store
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-pnpm-store-
+          node-version: 20
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci
 
-      - name: Run semantic-release (dry-run)
+      - name: Semantic Release Dry Run
+        id: semrel
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Capture output to a file so we can comment it on the PR
-          npx semantic-release --dry-run --debug > release-dryrun.log 2>&1 || true
+          set -eo pipefail
+          npx semantic-release --dry-run --debug | tee semrel.log
 
-      - name: Extract proposed version
-        id: extract
-        run: |
-          set -e
-          NEXT=''
-          if [ -f release-dryrun.log ]; then
-            NEXT=$(grep -Po "The next release version is \K[0-9]+\.[0-9]+\.[0-9]+" release-dryrun.log | head -n1 || true)
-            if [ -z "$NEXT" ]; then
-              NEXT=$(grep -Po "will be released as \K[0-9]+\.[0-9]+\.[0-9]+" release-dryrun.log | head -n1 || true)
-            fi
-          fi
-          if [ -z "$NEXT" ]; then
-            NEXT=unknown
-          fi
-          echo "next_version=$NEXT" >> $GITHUB_OUTPUT
+          # Extrae la versión del log (formato estándar y alternativo)
+          VERSION=$(grep -oiE "the next release version is[[:space:]]+v?[0-9]+\.[0-9]+\.[0-9]+([.-][0-9A-Za-z]+)*" semrel.log \
+            | tail -n1 | sed -E 's/.*is[[:space:]]+v?//I')
 
-      - name: Build comment body
-        id: build_comment
-        run: |
-          set -e
-          if [ -f release-dryrun.log ]; then
-            # truncate to 60k bytes
-            head -c 60000 release-dryrun.log > release-dryrun-trim.log || true
-          else
-            echo "No dry-run output found." > release-dryrun-trim.log
+          if [ -z "$VERSION" ]; then
+            VERSION=$(grep -oE "nextRelease[^}]*version['\"]?[[:space:]]*:[[:space:]]*['\"][0-9]+\.[0-9]+\.[0-9]+([.-][0-9A-Za-z]+)*" semrel.log \
+              | tail -n1 | sed -E "s/.*version['\"]?[[:space:]]*:[[:space:]]*['\"]//; s/['\"]$//")
           fi
-          NEXT=${{ steps.extract.outputs.next_version }}
-          echo "body<<EOF" >> $GITHUB_OUTPUT
-          echo "### semantic-release dry-run" >> $GITHUB_OUTPUT
-          echo "**Proposed version:** ${NEXT}" >> $GITHUB_OUTPUT
-          echo "" >> $GITHUB_OUTPUT
-          echo "<details><summary>Dry-run output (click to expand)</summary>" >> $GITHUB_OUTPUT
-          echo "" >> $GITHUB_OUTPUT
-          echo '<pre>' >> $GITHUB_OUTPUT
-          cat release-dryrun-trim.log >> $GITHUB_OUTPUT
-          echo '</pre>' >> $GITHUB_OUTPUT
-          echo "" >> $GITHUB_OUTPUT
-          echo "</details>" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Create or update PR comment with dry-run output
+          echo "version=${VERSION:-unknown}" >> "$GITHUB_OUTPUT"
+
+          # Adjunta últimas 200 líneas del log al output (multilínea)
+          echo "log<<EOF" >> "$GITHUB_OUTPUT"
+          tail -n 200 semrel.log >> "$GITHUB_OUTPUT"
+          echo "EOF" >> "$GITHUB_OUTPUT"
+
+      - name: Comment on Pull Request
+        if: ${{ success() && github.event.pull_request.head.repo.full_name == github.repository }}
         uses: peter-evans/create-or-update-comment@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
-          body: ${{ steps.build_comment.outputs.body }}
-          edit-mode: replace
+          body: |
+            ### semantic-release dry-run
+            **Proposed version:** ${{ steps.semrel.outputs.version }}
+
+            <details><summary>Dry-run output (last 200 lines)</summary>
+
+            ```
+            ${{ steps.semrel.outputs.log }}
+            ```
+
+            </details>
