--- a/.github/workflows/pull-request-dryrun.yml
+++ b/.github/workflows/pull-request-dryrun.yml
@@ -1,77 +1,105 @@
-name: Pull Request Dry Run
-
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+name: PR release dry-run
 
 permissions:
   contents: read
   issues: write
   pull-requests: write
 
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches: [ main ]  # ⚠️ si haces PR a develop, añade 'develop' aquí
+
 jobs:
   semantic-release-dry-run:
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+    name: semantic-release dry-run
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           fetch-tags: true
           persist-credentials: true
-
+          
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'pnpm'
+          # semantic-release v25 requiere Node >=24.10.0
+          node-version: '24.10.0'
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
+      - name: Enable Corepack & pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@10.19.0 --activate
+
+      - name: Cache pnpm store
+        uses: actions/cache@v4
         with:
-          version: 9
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Semantic Release Dry Run
-        id: semrel
+      - name: Run semantic-release (dry-run)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          set -eo pipefail
-          pnpm dlx semantic-release --dry-run --debug | tee semrel.log
+          # Capturamos salida para comentarla en el PR
+          pnpm dlx semantic-release --dry-run --debug > release-dryrun.log 2>&1 || true
 
-          # Extrae la versión del log (formato estándar y alternativo)
-          VERSION=$(grep -oiE "the next release version is[[:space:]]+v?[0-9]+\.[0-9]+\.[0-9]+([.-][0-9A-Za-z]+)*" semrel.log \
-            | tail -n1 | sed -E 's/.*is[[:space:]]+v?//I')
-
-          if [ -z "$VERSION" ]; then
-            VERSION=$(grep -oE "nextRelease[^}]*version['\"]?[[:space:]]*:[[:space:]]*['\"][0-9]+\.[0-9]+\.[0-9]+([.-][0-9A-Za-z]+)*" semrel.log \
-              | tail -n1 | sed -E "s/.*version['\"]?[[:space:]]*:[[:space:]]*['\"]//; s/['\"]$//")
+      - name: Extract proposed version
+        id: extract
+        run: |
+          set -e
+          NEXT=''
+          if [ -f release-dryrun.log ]; then
+            # Caso 1: "The next release version is vX.Y.Z[-prerelease]"
+            NEXT=$(grep -Po "The next release version is v?\K[0-9]+\.[0-9]+\.[0-9]+(?:[-.][0-9A-Za-z.]+)?" release-dryrun.log | head -n1 || true)
+            # Caso 2 (fallback): nextRelease: { version: 'X.Y.Z[-prerelease]' }
+            if [ -z "$NEXT" ]; then
+              NEXT=$(grep -Po "nextRelease[^}]*version['\"]?\s*:\s*['\"][0-9]+\.[0-9]+\.[0-9]+(?:[-.][0-9A-Za-z.]+)?" release-dryrun.log \
+                | head -n1 | sed -E "s/.*version['\"]?\s*:\s*['\"]//; s/['\"]$//" || true)
+            fi
+            # Caso 3 (fallback antiguo): "will be released as X.Y.Z[-prerelease]"
+            if [ -z "$NEXT" ]; then
+              NEXT=$(grep -Po "will be released as \K[0-9]+\.[0-9]+\.[0-9]+(?:[-.][0-9A-Za-z.]+)?" release-dryrun.log | head -n1 || true)
+            fi
           fi
+          echo "next_version=${NEXT:-unknown}" >> $GITHUB_OUTPUT
 
-          echo "version=${VERSION:-unknown}" >> "$GITHUB_OUTPUT"
+      - name: Build comment body
+        id: build_comment
+        run: |
+          set -e
+          if [ -f release-dryrun.log ]; then
+            # Truncamos a ~60KB para evitar límites
+            head -c 60000 release-dryrun.log > release-dryrun-trim.log || true
+          else
+            echo "No dry-run output found." > release-dryrun-trim.log
+          fi
+          NEXT=${{ steps.extract.outputs.next_version }}
+          {
+            echo "body<<EOF"
+            echo "### semantic-release dry-run"
+            echo "**Proposed version:** ${NEXT}"
+            echo
+            echo "<details><summary>Dry-run output (click to expand)</summary>"
+            echo
+            echo '<pre>'
+            cat release-dryrun-trim.log
+            echo '</pre>'
+            echo
+            echo "</details>"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
 
-          # Adjunta últimas 200 líneas del log al output (multilínea)
-          echo "log<<EOF" >> "$GITHUB_OUTPUT"
-          tail -n 200 semrel.log >> "$GITHUB_OUTPUT"
-          echo "EOF" >> "$GITHUB_OUTPUT"
-
-      - name: Comment on Pull Request
-        if: ${{ success() && github.event.pull_request.head.repo.full_name == github.repository }}
+      - name: Create or update PR comment with dry-run output
         uses: peter-evans/create-or-update-comment@v4
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            ### semantic-release dry-run
-            **Proposed version:** ${{ steps.semrel.outputs.version }}
-
-            <details><summary>Dry-run output (last 200 lines)</summary>
-
-            ```
-            ${{ steps.semrel.outputs.log }}
-            ```
-
-            </details>
+          body: ${{ steps.build_comment.outputs.body }}
+          edit-mode: replace
