--- a/.github/workflows/pull-request-dryrun.yml
+++ b/.github/workflows/pull-request-dryrun.yml
@@ -60,14 +60,15 @@ jobs:
             NEXT=$(grep -Po "The next release version is v?\K[0-9]+\.[0-9]+\.[0-9]+(?:[-.][0-9A-Za-z.]+)?" release-dryrun.log | head -n1 || true)
             # Caso 2 (fallback): nextRelease: { version: 'X.Y.Z[-prerelease]' }
             if [ -z "$NEXT" ]; then
-              NEXT=$(grep -Po "nextRelease[^}]*version['\"]?\s*:\s*['\"][0-9]+\.[0-9]+\.[0-9]+(?:[-.][0-9A-Za-z.]+)?" release-dryrun.log \
-                | head -n1 | sed -E "s/.*version['\"]?\s*:\s*['\"]//; s/['\"]$//" || true)
+              NEXT=$(grep -Po "nextRelease[^}]*version['"]?\s*:\s*['\"][0-9]+\.[0-9]+\.[0-9]+(?:[-.][0-9A-Za-z.]+)?" release-dryrun.log \
+                | head -n1 | sed -E "s/.*version['"]?\s*:\s*['"]//; s/['"]$//" || true)
             fi
             # Caso 3 (fallback antiguo): "will be released as X.Y.Z[-prerelease]"
             if [ -z "$NEXT" ]; then
               NEXT=$(grep -Po "will be released as \K[0-9]+\.[0-9]+\.[0-9]+(?:[-.][0-9A-Za-z.]+)?" release-dryrun.log | head -n1 || true)
             fi
           fi
+          echo "version=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_OUTPUT
           echo "next_version=${NEXT:-unknown}" >> $GITHUB_OUTPUT
 
       - name: Build comment body
