--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -6,7 +6,8 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
+  packages: write
 
 jobs:
   publish:
@@ -42,7 +43,10 @@ jobs:
 
       - name: Read package version
         id: pkg
-        run: echo "version=$(node -p 'require("./package.json").version')" >> $GITHUB_OUTPUT
+        run: |
+          # Use node -e to avoid nested-quote parsing issues
+          VERSION=$(node -e "console.log(require('./package.json').version)")
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       # semantic-release runs on main and will create tags/releases itself
 
