--- a/.github/workflows/pull-request-dryrun.yml
+++ b/.github/workflows/pull-request-dryrun.yml
@@ -43,6 +43,13 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Ensure conventional commits parser is available
+        run: |
+          # Install parser required by @semantic-release/commit-analyzer if not present
+          corepack enable || true
+          corepack prepare pnpm@10.19.0 --activate || true
+          pnpm add -D --no-frozen-lockfile conventional-changelog-conventionalcommits@^4.3.0
+
       - name: Run semantic-release (dry-run)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
