--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@semantic-release/npm": "^13.1.1",
     "@semantic-release/release-notes-generator": "^14.1.0",
     "cross-env": "^10.1.0",
+    "conventional-changelog-conventionalcommits": "^4.3.0",
     "jest": "^30.2.0",
     "semantic-release": "^25.0.1"
   }
