--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   },
   "scripts": {
     "check": "pnpm exec node scripts/grade.mjs --no-html",
-    "report": "pnpm exec node scripts/grade-report.mjs",
     "report:static": "pnpm exec node scripts/grade-report.mjs -- --generate-only",
-    "report:dev": "pnpm exec node scripts/dev-report.mjs"
+    "serve:dist": "pnpm exec vite preview --port 5173 --strictPort --host 0.0.0.0 --outDir dist",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --runInBand"
   },
   "bin": {
     "openapi-grade": "scripts/grade.mjs"
