--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,11 +55,13 @@ jobs:
           GRADE_SOFT=1 pnpm run check -- example/openapi.yaml || true
 
       - name: Generate static report (example)
+        if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main') }}
         # Generate a static report under dist/ so it can be archived as an artifact
         run: |
           pnpm run report:static -- example/openapi.yaml
 
       - name: Upload report artifacts
+        if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main') }}
         uses: actions/upload-artifact@v4
         with:
           name: grade-report-dist
