feat(cli): exponer binarios openapi-report y openapi-report-static (alias de report:static) para npx/pnpm; generan docs y swagger desde bundle o spec

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "release": "node scripts/release-only-ci.mjs"
   },
   "bin": {
-    "openapi-grade": "scripts/grade.mjs"
+    "openapi-grade": "scripts/grade.mjs",
+    "openapi-report": "scripts/grade-report.mjs",
+    "openapi-report-static": "scripts/grade-report.mjs"
   },
   "files": [
     "scripts",
